--- a/static/templates/setting_deploy.html
+++ b/static/templates/setting_deploy.html
@@ -9,7 +9,7 @@
                         <el-descriptions style="margin-bottom: 10px;" direction="vertical" :column="1" border>
                             <el-descriptions-item label="通用聊天链接">
                                 <a style="margin-right: 10px"><{host}>/chatIndex?kefu_id=kefu2</a>
-                                <el-button  size="mini" v-on:click="copyText(host+'/chatIndex?kefu_id=kefu2')">复制</el-button>
+                                <el-button  size="mini" v-on:click="copyText(host+'/chatIndex?kefu_id=ikun')">复制</el-button>
                             </el-descriptions-item>
                         </el-descriptions>
                     </el-tab-pane>
